--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
   <header>
     <h1>AnTPlay+</h1>
-    <nav>
+    <nav id="nav">
       <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Filmes</a></li>
-        <li><a href="#">A Minha Lista</a></li>
+        <li><a href="/">Início</a></li>
+        <li><a href="/filmes/">Filmes</a></li>
+        <li><a href="/lista/">A Minha Lista</a></li>
       </ul>
     </nav>
+    <button id="menu-toggle">+</button>
   </header>
 
   <main>
@@ -34,12 +35,13 @@
         <img src="https://via.placeholder.com/300x170" alt="Filme 2" />
         <h3>Filme 2</h3>
       </div>
-      <!-- Adiciona mais cards conforme necessário -->
     </section>
   </main>
 
   <footer>
     <p>&copy; 2025 AnTPlay+.</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
