--- a/filmes/index.html
+++ b/filmes/index.html
@@ -8,17 +8,16 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>AnTPlay+</h1>
-    <nav id="nav">
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="filmes.html">Filmes</a></li>
-        <li><a href="lista.html">A Minha Lista</a></li>
-      </ul>
-    </nav>
-    <button id="menu-toggle">+</button>
-  </header>
+<header>
+  <h1>AnTPlay+</h1>
+  <nav>
+    <ul>
+      <li><a href="/">Início</a></li>
+      <li><a href="/filmes/">Filmes</a></li>
+      <li><a href="/lista/">A Minha Lista</a></li>
+    </ul>
+  </nav>
+</header>
 
   <main>
     <h2>Filmes em Destaque</h2>
